mongodb/manifest.yaml
#---- Deployement of Pod -----------
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: mongodb
  namespace: robomart
  labels: 
    project: robomart
    component: mongodb
    tier: db
spec:
  replicas: 1
  selector:
    matchLabels:
      project: robomart
      component: mongodb
      tier: db
  template:
    metadata:
      labels:
        project: robomart
        component: mongodb
        tier: db
    spec:
      containers:
      - name: mongodb
        image: azharmd/mongodb:v1
        imagePullPolicy: Always
        readinessProbe:
          tcpSocket:
            port: 27017
          initialDelaySeconds: 40
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 27017
          initialDelaySeconds: 70
          periodSeconds: 10

--- #service---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: robomart
spec:
  selector:
    project: robomart
    component: mongodb
    tier: db
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
