mongodb/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongodb-accept-catalogue
  namespace: robomart
spec:
  podSelector:
    matchLabels:
      project: robomart
      component: mongodb
      tier: db
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          project: robomart
          component: catalogue
          tier: backend
    - podSelector:
        matchLabels:
          project: robomart
          component: user
          tier: backend
    ports:
    - protocol: TCP
      port: 27017
